# arkworks-tests

./: Cargo.toml  README.md
src/: main.rs
src/gadgets/: crh.rs  emulation.rs  fq.rs  group_var.rs  mod.rs  pairing.rs  uint8.rs
src/proofs/: crh.rs  fp.rs  mod.rs  pairing.rs
src/utils/: mod.rs
