[package]
name = "arkworks-tests"
version = "0.1.0"
edition = "2024"

[dependencies]
ark-r1cs-std = { version = "^0.4.0" }
ark-relations = { version = "^0.4.0", features = ["std"] }
ark-ff = "^0.4.0"
ark-test-curves = { version = "^0.4.0", features = ["bls12_381_curve"] }
ark-bls12-377 = { version = "^0.4.0", features = ["r1cs", "curve"] }
ark-bls12-381 = { version = "^0.4.0", features = ["curve"] }
ark-bw6-761 = { version = "^0.4.0" }
ark-std = "^0.4.0"
ark-snark = "^0.4.0"
ark-groth16 = "^0.4.0"
ark-ec = "^0.4.0"
ark-crypto-primitives = { version = "^0.4.0", features = ["crh", "r1cs"] }
ark-ed-on-bls12-377 = { version = "^0.4.0", features = ["r1cs"] }